feat: add saveAndAnalysisImage
