# main-api/src/app.dto.ts
@@ -1,4 +1,5 @@
 import { ApiProperty } from '@nestjs/swagger';
+import { IsString } from 'class-validator';
 
 export class GetImageResponse {
   @ApiProperty({
@@ -10,4 +11,24 @@ export class GetImageResponse {
     type: String,
   })
   imageBase64: string;
+}
+
+export class SaveAndAnalysisImageRequest {
+  @ApiProperty({
+    type: String,
+  })
+  @IsString()
+  imgData: string;
+}
+
+export class SaveAndAnalysisImageResponse {
+  @ApiProperty({
+    type: Number,
+  })
+  class: number;
+
+  @ApiProperty({
+    type: Number,
+  })
+  confidence: number;
 }
